k3d/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-usuarios
  namespace: microservicios
spec:
  ingressClassName: traefik
  rules:
    - host: usuarios.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicio-usuarios-chart
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-pedidos
  namespace: microservicios
spec:
  ingressClassName: traefik
  rules:
    - host: pedidos.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicio-pedidos-chart
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
